# solana-ai-skill

./: CLAUDE.md  LICENSE  README.md  install-common.sh  install-custom.sh  install.sh
.github/workflows/: ci.yml
agents/: vault-architect.md  vault-auditor.md
commands/: audit-vault.md  migrate-cpi.md  new-vault.md
rules/: vault-safety.md
skill/: SKILL.md  attack-tests.md  guards.md  idl-diff-migration.md  invariants-qedgen.md  jupiter-rebalance.md  keeper-crank.md  meteora-dlmm-cpi.md  orca-whirlpool-cpi.md  partners-apis.md  svs-interface.md  svs-variant-picker.md  trail-of-bits-checklist.md
social/: 02-the-refusal.html  _base.css
templates/: README.md
templates/guards/: Cargo.toml
templates/guards/src/: lib.rs
templates/keeper/: package.json
templates/keeper/src/: index.ts
templates/tests/: Cargo.toml  attack.test.ts  invariants.rs
templates/vault-allocator/: Anchor.toml
templates/vault-allocator/programs/vault-allocator/: Cargo.toml
templates/vault-allocator/programs/vault-allocator/src/: errors.rs  guards.rs  lib.rs
templates/vault-allocator/programs/vault-allocator/src/instructions/: admin.rs  deposit.rs  initialize.rs  mod.rs  rebalance.rs  withdraw.rs
templates/vault-allocator/programs/vault-allocator/src/state/: mod.rs
